--- a/.local/ProjectSettings.json
+++ b/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Login.xaml\",\"Main.xaml\",\"Extracao.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
+{"OpenedDocuments":"[\"Email.xaml\",\"Extracao.xaml\",\"Main.xaml\"]","ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}"}
